# pyworkshop

./: .gitignore  README.md  nbgrader_config.py  pyproject.toml  run.py  🏠_Home.py
assets/markdown/: 01_📚_Lets_Get_Started.md  02_🔢_Back_2_Basic.md  03_🌵_DRY.md  04_🐍_The_Pythonic_Way.md  05_🔘_Don't_Reinvent_The_Wheel.md  06_🌐_Master_Googler.md  07_🛣️_A_Long_Journey_Ahead.md
pages/: 00_🧑_About_Us.py  01_📚_Lets_Get_Started.py  02_🔢_Back_2_Basic.py  03_🌵_DRY.py  04_🐍_The_Pythonic_Way.py  05_🔘_Don't_Reinvent_The_Wheel.py  06_🌐_Master_Googler.py  07_🛣️_A_Long_Journey_Ahead.py
release/pyworkshop-homework/: pyworkshop-homework.ipynb
